fixed server in unix. ip port set to 192.168.1.4.